--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!doctype html><html lang="en" style="height: auto"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="/cyb-portal-test/favicon.ico"><script defer="defer" src="/cyb-portal-test/js/runtime.487f8ab9215770bdce43.bundle.js"></script><script defer="defer" src="/cyb-portal-test/js/main.8a71d8c25600f42a2c0b.bundle.js"></script><link href="/cyb-portal-test/styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
+<!doctype html><html lang="en" style="height: auto"><head><script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-M2HN76X");</script><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="favicon.ico"><script defer="defer" src="js/runtime.12dbba491fbcb980984b.bundle.js"></script><script defer="defer" src="js/main.482d4f006aa05a7a5dd0.bundle.js"></script><link href="styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
       min-height: 100vh;
       display: flex;
       flex-direction: column;"></body></html>
