--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-M2HN76X");</script><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="favicon.ico"><script defer="defer" src="js/runtime.12dbba491fbcb980984b.bundle.js"></script><script defer="defer" src="js/main.482d4f006aa05a7a5dd0.bundle.js"></script><link href="styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
+      })(window, document, "script", "dataLayer", "GTM-M2HN76X");</script><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="/files/cyber/portal/favicon.ico"><script defer="defer" src="/files/cyber/portal/js/runtime.cf152c8e4c241a4be0a0.bundle.js"></script><script defer="defer" src="/files/cyber/portal/js/main.482d4f006aa05a7a5dd0.bundle.js"></script><link href="/files/cyber/portal/styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
       min-height: 100vh;
       display: flex;
       flex-direction: column;"></body></html>
