--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!doctype html><html lang="en" style="height: auto"><head><script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-M2HN76X");</script><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="/files/cyber/portal/favicon.ico"><script defer="defer" src="/files/cyber/portal/js/runtime.cf152c8e4c241a4be0a0.bundle.js"></script><script defer="defer" src="/files/cyber/portal/js/main.482d4f006aa05a7a5dd0.bundle.js"></script><link href="/files/cyber/portal/styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
+<!doctype html><html lang="en" style="height: auto"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><title>Cyber Portal</title><link rel="icon" href="/files/cyber/portal/favicon.ico"><script defer="defer" src="/files/cyber/portal/js/runtime.cf152c8e4c241a4be0a0.bundle.js"></script><script defer="defer" src="/files/cyber/portal/js/main.5dc09fd54ee12f80a965.bundle.js"></script><link href="/files/cyber/portal/styles/main.820c251e52c6963469c9.css" rel="stylesheet"></head><body style="height: auto;
       min-height: 100vh;
       display: flex;
       flex-direction: column;"></body></html>
